Добавлены сведения о евегнии

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Информация о студентах</title>
 </head>
 <body>
-    хамстер хамстер хамстер криминал
+    <head><h1>Информация о студентах факультета</h1></head>
+<main>Тут будут представлены разные студенты факультета они все большие молодцы и во многом они хороши они много добивались везде еще со времен варфейса и блокстрайка</main>
+<section>Студент 1 - Евгений Веселковский: 
+    <ul><li>Имя: Евгений Веселковский</li>
+    <li>Возраст: 18 лет</li>
+<li>Факультет: Информатика</li>
+<li>Интересы: Программирование, игрушки, книжки всякие интересные
+</li>
+<li>Достижения: брал анрила в форте, предыч в колде мобайл, учавствовал в подготовке к олимпиаде по информатике</li>
+<li>Изображение: <img src="5382173988958102055.jpg" alt="guy"></li></ul>
+<button type="button" href="youtube.com"></button></section>
 </body>
 </html>
