Добавлена информация о втором студенте

--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 </li>
 <li>Достижения: брал анрила в форте, предыч в колде мобайл, учавствовал в подготовке к олимпиаде по информатике</li>
 <li>Изображение: <img src="5382173988958102055.jpg" alt="guy"></li></ul>
-<button type="button" href="youtube.com"></button></section>
+<button type="button" href="https://www.youtube.com">Поподробнее</button></section>
+<section>Студент 2 - Алишер Каскарбаев: 
+    <ul><li>Имя: Алишер</li>
+    <li>Возраст: 18 лет</li>
+<li>Факультет: Информатика</li>
+<li>Интересы: Программирование
+</li>
+<li>Достижения: олимпиада бритиш бульдог второе место</li>
+<li>Изображение: <img src="joker.jpg" alt="guy"></li></ul>
+<button type="button" href="https://www.youtube.com">Поподробнее</button></section>
 </body>
 </html>
